# servox

./: .dockerignore  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .python-version  CHANGELOG.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  autotest.py  docker-compose.yaml  entrypoint.sh  index.yaml  mkdocs.yml  nitpick-style.toml  opsani.token  pydoc-markdown.yml  pyproject.toml  servo.yaml__  servox-2.2.2.tgz  servox-2.2.3.tgz  servox-2.2.4.tgz  servox-2.2.5.tgz  servox-2.2.6.tgz  servox-2.2.7.tgz  servox-2.2.8.tgz  servox-23.12.1.tgz  servox-24.1.0.tgz  servox-24.3.0.tgz  servox-25.3.0.tgz  setup.cfg  setup.py
.github/workflows/: black.yml  codeql-analysis.yml  docker.yaml  dockerhub-description.yml  installation.yaml  license-headers.yaml  mirror.yaml  mypy.yaml  pre-commit.yaml  release-drafter.yml  release.yml  scc.yml  test.yaml  wemake.yaml
app_factory/: app_factory.py  setup.py
connectors/kubernetes/: kubernetes.py
connectors/servo-webhooks/: README.md  pyproject.toml  servo_webhooks.py  test_servo_webhooks.py
connectors/vegeta/: pyproject.toml  vegeta.py  vegeta_test.py
docs/: README-DOCKER_HUB.md  checks.md  index.md  telemetry.md
docs/api/: core.md  kubernetes_connector.md
docs/css/: custom.css
example_app/: README.md  example_servo.yaml  opsani-servox.yaml  prometheus.yaml  web-dep.yaml  web-rol.yaml  web-svc-dep.yaml  web-svc-lb.yaml  web-svc-np.yaml  web-svc-rol.yaml
helm/: Chart.yaml  values.example.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  role.yaml  rolebinding.yaml  secret-sidecar.yaml  secret.yaml  serviceaccount.yaml
kubernetes_connector/: pyproject.toml
mechanism/: README.md  pyproject.toml
mechanism/mechanism/: __init__.py  _dotenv.py  _fixtures.py  plugin.py
prometheus_connector/: pyproject.toml
prometheus_connector/tests/: test_prometheus_connector.py
servo/: __init__.py  api.py  assembly.py  checks.py  cli.py  config.py  configuration.py  connector.py  encoders.py  entry_points.py  errors.py  events.py  fast_fail.py  logging.py  metrics.py  pub_sub.py  pubsub.py  pyproject.toml  repeating.py  runner.py  servo.py  servo.yaml  servo_runner.py  telemetry.py  testing.py  types.py  utilities.py
servo/connectors/: __init__.py  emulator.py  formation.py  kube_metrics.py  kubernetes.py  metrics.py  newrelic.py  opsani_dev.py  prometheus.py  scripts.py  slack_notifications.py  vegeta.py  vegeta_target_schema.json  wait.py  wavefront.py
servo/connectors/kubernetes_helpers/: __init__.py  base.py  base_workload.py  container.py  deployment.py  namespace.py  pod.py  replicaset.py  service.py  statefulset.py  util.py
servo/connectors/olas/: ast_formula.py  client.py  configuration.py  connector.py  controller.py  envoy_stats.py  eventqueue.py  fastpath.py  kube.py  prometheus.py  server_classes.py  utility.py
servo/connectors/prometheus/: __init__.py  checks.py  client.py  configuration.py  connector.py  models.py
servo/connectors/scripts/: __init__.py  configuration.py  connector.py
servo/servo/: cli.py  connector.py  test.py
servo/servo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
servo/tests/: test_servo.py
servo/types/: __init__.py  api.py  core.py  kubernetes.py  settings.py  slo.py
servo/utilities/: __init__.py  associations.py  duration_str.py  hashing.py  inspect.py  key_paths.py  progress.py  pydantic.py  signal_handler.py  strings.py  subprocess.py  yaml.py
servox/: cli.py  connector.py
servox/connectors/kubernetes/: kubernetes_test.py
tests/: .gitignore  api_test.py  assembly_test.py  checks_test.py  cli_test.py  configuration_test.py  conftest.py  connector_test.py  diagnostics_test.py  fake.py  fake_test.py  fast_fail_test.py  helpers.py  kubernetes_test.py  logging_test.py  pubsub_test.py  repeating_test.py  runner_test.py  servo_test.py  telemetry_test.py  test_formation.py  test_helpers.py  types_test.py  utilities_test.py  wamp_test.py
tests/connectors/: conftest.py  emulator_test.py  kube_metrics_test.py  kubernetes_test.py  opsani_dev_test.py  prometheus_test.py  scripts_test.py  slack_notifications_test.py  wavefront_test.py
tests/connectors/opsani_dev/: deployment.yaml  prometheus.yaml  service.yaml
tests/connectors/opsani_dev/argo_rollouts/: rollout-workload-ref.yaml  rollout-workload-ref_no_selector.yaml  rollout.yaml  rollout_no_mem.yaml
tests/integration/: api_test.py  cli_test.py  pubsub_test.py
tests/manifests/: canary.yaml  co-http.yaml  complete_canary.yaml  fiber-http-opsani-dev.yaml  fiber-http-opsani-dev_no_resource_limits.yaml  fiber-http-opsani-dev_no_resource_requests.yaml  fiber-http-rollout-opsani-dev.yaml  fiber-http-unready-cmd.yaml  fiber-http.yaml  k6.yaml  nginx.yaml  prometheus.yaml  servo-configmap.yaml
tests/manifests/argo_rollouts/: fiber-http-opsani-dev-workload-ref.yaml  fiber-http-opsani-dev.yaml  fiber-http-workload-ref_single_port.yaml  fiber-http_single_port.yaml
tests/manifests/opsani_dev/argo_rollouts/: rollout-workload-ref_no_cpu_limit.yaml  rollout-workload-ref_no_mem.yaml  rollout.yaml  rollout_no_cpu_limit.yaml  rollout_no_selector.yaml
tests/manifests/resource_requirements/: fiber-http_bursty_memory.yaml  fiber-http_no_cpu_limit.yaml  fiber-http_no_resource_limits.yaml  fiber-http_no_resource_requirements.yaml
tests/manifests/sidecar_injection/: fiber-http_multiple_ports.yaml  fiber-http_multiple_ports_symbolic_targets.yaml
tests/system/: autoscaler_test.py  cli_test.py  conftest.py  docker_test.py
tests/types/: api_test.py  core_test.py  settings_test.py
tests/utilities/: associations_test.py  duration_test.py  inspect_test.py  subprocess_test.py
voracious/: README.md  emu.sh  requirements.txt  run-reload.sh  run.sh  voracious.py
