[tool.poetry]
name = "servox"
version = "0.9.5"
description = "Opsani Servo: The Next Generation"
homepage = "https://opsani.com/"
repository = "https://github.com/opsani/servox"
authors = ["Blake Watters <blake@opsani.com>"]
readme = "README.md"
license = "Apache-2.0"
packages = [
    { include = "servo" },
]
include = ["README.md", "CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.5.1"
loguru = "^0.5.1"
httpx = "^0.16.1"
python-dotenv = "^0.15.0"
semver = "^2.10.1"
pyaml = "^20.4.0"
tabulate = "^0.8.7"
pygments = "^2.6.1"
devtools = "^0.6.0"
backoff = "^1.10.0"
typer = "^0.3.0"
bullet = "^2.1.0"
jsonschema = "^3.2.0"
timeago = "^1.0.14"
kubernetes_asyncio = ">=11.3,<13.0"
orjson = "^3.3.1"
uvloop = "^0.14.0"
statesman = "^1.0.0"
pytz = "^2020.4"
toml = "^0.10.2"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.10.0"
pytest-mock = "^3.5.1"
freezegun = "^1.0.0"
asynctest = {git = "https://github.com/Martiusweb/asynctest.git", rev = "py3.8"}
respx = "^0.16.3"
kubetest = {git = "https://github.com/opsani/kubetest.git", rev = "feature/template-manifests"}
# kubetest = {path = "../kubetest", develop = true}
pytest-freezegun = "^0.4.2"
yamlpath = "^3.2.0"
isort = "^5.7.0"
autoflake = "^1.4"
flake8-fixme = "^1.1.1"
flake8-isort = "^4.0.0"
pre-commit = "^2.9.2"
pytest-randomly = "^3.5.0"
flake8-pytest-style = "^1.3.0"
mypy = "^0.790"
nitpick = "^0.23.1"
flakehell = "^0.9.0"
flake8-docstrings = "^1.5.0"
flake8-quotes = "^3.2.0"
flake8-bugbear = "^20.1.4"
flake8-builtins = "^1.5.3"
flake8-eradicate = "^1.0.0"
flake8-use-fstring = "^1.1"
flake8-annotations-coverage = "^0.0.4"
flake8-annotations-complexity = "^0.0.5"
flake8-annotations = "^2.5.0"
flake8-markdown = "^0.2.0"
flake8-bandit = "^2.1.2"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"
pytest-profiling = "^1.7.0"
pytest-sugar = "^0.9.4"
pytest-clarity = "^0.3.0-alpha.0"
pytest-picked = "^0.4.6"
chevron = "^0.14.0"
pytest-xdist = "^2.2.0"
pytest-vscodedebug = "^0.1.0"
pytest-html = "^3.1.1"
bandit = "^1.7.0"
watchgod = "^0.6"
pytest-timeout = "^1.4.2"

[tool.poetry.scripts]
servo = "servo.entry_points:run_cli"

[tool.poetry.plugins."servo.connectors"]
vegeta = "servo.connectors.vegeta:VegetaConnector"
kubernetes = "servo.connectors.kubernetes:KubernetesConnector"
prometheus = "servo.connectors.prometheus:PrometheusConnector"
opsani_dev = "servo.connectors.opsani_dev:OpsaniDevConnector"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
line_length = 120
known_first_party = "tests"
src_paths = ["servo", "tests"]

[tool.nitpick]
style = "nitpick-style.toml"

[tool.flakehell]
base = "https://raw.githubusercontent.com/life4/flakehell/master/pyproject.toml"
exclude = ["README.md", "docs", "tests"]
format = "grouped"
max_line_length = 120
show_source = true

[tool.flakehell.plugins]
pycodestyle = ["+*"]
pyflakes = ["+*"]
nitpick = ["+*"]
mccabe = ["+*"]

# enable everything that starts from `flake8-`
"flake8-*" = ["+*"]

# disable pylint -- raising mysterious errors
pylint = ["-*"]

[tool.flakehell.exceptions."tests/"]
pycodestyle = ["-*"]
pyflakes = ["-*"]
