[tool.poetry]
name = "servox"
version = "2.2.1"
description = "Opsani Servo: The Next Generation"
homepage = "https://opsani.com/"
repository = "https://github.com/opsani/servox"
authors = ["Blake Watters <blake@opsani.com>"]
readme = "README.md"
license = "Apache-2.0"
packages = [
    { include = "servo" },
]
include = ["README.md", "CHANGELOG.md"]

[tool.poetry.dependencies]
python = ">=3.8,<=3.9.11"
pydantic = "^1.9.0"
loguru = "^0.5.1"
httpx = "^0.23.0"
python-dotenv = ">=0.15,<0.20"
semver = "^2.10.1"
pyaml = "^20.4.0"
tabulate = "^0.8.7"
pygments = "^2.6.1"
devtools = "^0.8.0"
backoff = "^1.10.0"
typer = "^0.4.0"
bullet = "^2.1.0"
jsonschema = "^3.2.0"
timeago = "^1.0.14"
orjson = "^3.5.0"
uvloop = "^0.16.0"
pytz = "^2021.1"
toml = "^0.10.2"
colorama = "^0.4.4"
pyfiglet = "^0.8.post1"
curlify2 = "^1.0.0"
kubernetes_asyncio = "^12.1.2"
aiofiles = "^0.8.0"
python-dateutil = "^2.8.2"
Authlib = "^1.1.0"
watchfiles = "^0.18.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.10.0"
pytest-mock = "^3.5.1"
freezegun = "^1.1.0"
respx = "^0.19.2"
kubetest = {git = "https://github.com/opsani/kubetest.git", rev = "feature/template-manifests"}
pytest-freezegun = "^0.4.2"
yamlpath = "^3.2.0"
isort = "^5.7.0"
autoflake = "^1.4"
flake8-fixme = "^1.1.1"
flake8-isort = "^4.0.0"
pre-commit = "^2.12.1"
pytest-randomly = "^3.7.0"
flake8-pytest-style = "^1.3.0"
mypy = "0.910"
nitpick = "^0.27.0"
flakehell = "^0.9.0"
flake8-docstrings = "^1.5.0"
flake8-quotes = "^3.3.0"
flake8-bugbear = "^21.3.2"
flake8-builtins = "^1.5.3"
flake8-eradicate = "^1.0.0"
flake8-use-fstring = "^1.1"
flake8-annotations-coverage = "^0.0.5"
flake8-annotations-complexity = "^0.0.5"
flake8-annotations = "^2.6.0"
flake8-markdown = "^0.2.0"
flake8-bandit = "^2.1.2"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
pytest-profiling = "^1.7.0"
pytest-sugar = "^0.9.4"
pytest-clarity = "^1.0.1"
pytest-picked = "^0.4.6"
chevron = "^0.14.0"
pytest-xdist = "^2.3.0"
pytest-vscodedebug = "^0.1.0"
pytest-html = "^3.1.1"
bandit = "^1.7.0"
statesman = "^1.0.2.post1"
types-PyYAML = "^6.0.4"
types-setuptools = "^57.4.8"
types-python-dateutil = "^2.8.9"
types-freezegun = "^1.1.6"
types-pytz = "^2021.3.4"
types-toml = "^0.10.3"
types-aiofiles = "^0.8.3"
types-tabulate = "^0.8.5"
black = "^22.3.0"
coverage = "^6.4"
pytest-timeout = "^2.1.0"

[tool.poetry.scripts]
servo = "servo.entry_points:run_cli"

[tool.poetry.plugins."servo.connectors"]
vegeta = "servo.connectors.vegeta:VegetaConnector"
kubernetes = "servo.connectors.kubernetes:KubernetesConnector"
prometheus = "servo.connectors.prometheus:PrometheusConnector"
opsani_dev = "servo.connectors.opsani_dev:OpsaniDevConnector"
scripts = "servo.connectors.scripts:ScriptsConnector"
kube_metrics = "servo.connectors.kube_metrics:KubeMetricsConnector"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
line_length = 120
known_first_party = "tests"
src_paths = ["servo", "tests"]

[tool.nitpick]
style = "nitpick-style.toml"

[tool.flakehell]
base = "https://raw.githubusercontent.com/life4/flakehell/master/pyproject.toml"
exclude = ["README.md", "docs", "tests"]
format = "grouped"
max_line_length = 120
show_source = true

[tool.flakehell.plugins]
pycodestyle = ["+*"]
pyflakes = ["+*"]
nitpick = ["+*"]
mccabe = ["+*"]

# enable everything that starts from `flake8-`
"flake8-*" = ["+*"]

# disable pylint -- raising mysterious errors
pylint = ["-*"]

[tool.flakehell.exceptions."tests/"]
pycodestyle = ["-*"]
pyflakes = ["-*"]
