[tool.poetry]
name = "mechanism"
version = "0.1.0"
description = "Testing support for ServoX components"
authors = ["Blake Watters <blake@opsani.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.1"
pytest-asyncio = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."pytest11"]
mechanism = "mechanism.plugin"
