[tool.poetry]
name = "servo"
version = "0.1.0"
description = "Continuous Optimization agent for Opsani"
authors = ["Blake Watters <blake@opsani.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
httpx = "^0.13.1"
pydantic = "^1.5.1"
pyyaml = "^5.3.1"
typer = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
