[tool.poetry]
name = "servo-webhooks"
version = "0.1.0"
description = "Provides a webhooks implementation for Opsani Servo connectors"
authors = ["Blake Watters <blake@opsani.com>"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.13.3"
servox = "^0.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-asyncio = "^0.14.0"
asynctest = {git = "https://github.com/Martiusweb/asynctest.git", rev = "py3.8"}
respx = "^0.11.2"

[tool.poetry.plugins."servo.connectors"]
"servo-webhooks" = "servo_webhooks:WebhooksConnector"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

